# langchain-docs-chatbot

./: .gitignore  LICENSE  Makefile  README.md  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: workflow.yaml
docker/: Dockerfile  build.sh  run.sh
src/: chat.py  chatbot_interface.py  doc_store.py  test_doc_store.py
src/app/: app.py
src/chat_agent/: chat_agent.py
src/data_downloader/: data_downloader.py  run.py
src/data_downloader/tests/: test_data_downloader.py
src/doc_store/: doc_store.py
src/model/: gpt4all.py  gpt4all_falcon.py
src/utils/: data.py
src/utils/tests/: test_data.py
tasks/: lint.sh  test.sh
