[tool.poetry]
name = "langchain-docs-chatbot"
version = "0.1.0"
description = ""
authors = ["erikgrip <https://github.com/erikgrip>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.252"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
ipykernel = "^6.25.0"
safety = "^2.3.5"
pylint = "^2.17.5"
pycodestyle = "^2.11.0"
pydocstyle = "^6.3.0"
mypy = "^1.5.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
