[tool.poetry]
name = "langchain-docs-chatbot"
version = "0.1.0"
description = ""
authors = ["erikgrip <https://github.com/erikgrip>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
langchain = "^0.0.252"
unstructured = {extras = ["md"], version = "^0.10.6"}
python-dotenv = "^1.0.0"
huggingface-hub = "^0.16.4"
# https://community.render.com/t/your-system-has-an-unsupported-version-of-sqlite3-chroma-requires-sqlite3-3-35-0/13807
chromadb = "0.3.29"
# https://github.com/oobabooga/text-generation-webui/issues/3762
pandas = "<2.1.0"
chroma-hnswlib = "^0.7.2"
gpt4all = "^1.0.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
ipykernel = "^6.25.0"
safety = "^2.3.5"
pylint = "^2.17.5"
pycodestyle = "^2.11.0"
pydocstyle = "^6.3.0"
mypy = "^1.5.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
